#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AM_INIT_AUTOMAKE
AC_PREREQ([2.71])
AC_INIT([libtest], [1.0], [ocasamitjana@icloud.com])
AC_CONFIG_SRCDIR([libtest.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

AUTOMAKE_OPTIONS = foreign

# Checks for libraries.
# FIXME: Replace 'main' with a function in '-lm':
AC_CHECK_LIB([m], [main])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
